--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,206 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.none {
+    display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.red {
+    color: crimson;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.blue {
+    color: dodgerblue;
 }
 
-.App-link {
-  color: #61dafb;
+.flex-container {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.X-container, .O-container, .game-container {
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-flex: 30 1 auto;
+    -ms-flex: 30 1 auto;
+    flex: 30 1 auto;
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    align-self: stretch;
+}
+
+.X-container, .O-container {
+    text-align: center;
+    font-size: 20vw;
+    font-weight: bold;
+}
+
+.X-container {
+    background: #cc133b;
+    color: #ff1945;
+}
+
+.O-container {
+    background: #1b64be;
+    color: #1e90ff;
+}
+
+.who_start {
+    width: 150px;
+    height: 50px;
+    border: 3px solid black;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+label {
+    display: block;
+    margin: 0 37px 0 13px;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 85px;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+    margin-left: 7px;
+}
+
+/* When the radio button is checked, add a blue background */
+label input:checked ~ .checkmark {
+    background-color: yellow;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+label input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+label .checkmark:after {
+    top: 6px;
+    left: 7px;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: grey;
+}
+
+/* On mouse-over, add a grey background color */
+label:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+
+.tic-tac-toc {
+    width: 150px;
+    height: 150px;
+    border: 2px solid black;
+    margin: 50px auto;
+}
+
+.grid {
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    float: left;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.button {
+    cursor: pointer;
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
+    border: none;
+    color: black;
+}
+
+button:focus {
+    outline: 0;
+}
+
+.winner {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.winner-x {
+    background-image: url(https://media.tenor.com/images/08e076856b749de768d04249de449cae/tenor.gif);
+}
+
+.winner-o {
+    background-image: url(https://media.giphy.com/media/lzC23JCgzrtxLVmSke/giphy.gif);
+}
+
+.winner-both {
+    background-image: url(https://media2.giphy.com/media/xUOwGpDaWNVJWsHRWU/source.gif);
+
 }
